Fixed Tailwind margin top. Adding lines indicating floor changes. Updated 3D cropped map

--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -208,6 +208,22 @@ textarea{
 .cancel-rotate {
     transform: rotateX(0deg) rotateY(0deg) rotateZ(-40deg) scaleY(175%);
 }
+body.threeD-on > div[id^="d"] > .guideline {
+    display: block;
+}
+.guideline {
+    display: none;
+    position: absolute;
+    width: 1px;
+    height: 286px;
+    background-color: #0d6efd;
+    z-index: 10;
+}
+.guideline-up {
+    background-color: orange;
+    transform: rotate(180deg);
+    transform-origin: top;
+}
 
 /* ============= 3D MAP END ========= */
 
